@@ -123,4 +123,6 @@ OPTIONS:
  -s|--simulate   Show commands to be executed but don't execute.
  -t|--teaching   Show commands to be executed and then execute them.
  -v|--verbose=n  Increase (or set) the level of verbosity (to n).
+ -r|--recommends    Used with INSTALL, to install Recommends too (this is Debian default).
+ -R|--norecommends  Used with INSTALL, to NOT install Recommends.
  -y|--yes        Assume yes for any questions asked.
